# imgui-flame-graph

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  imgui_widget_flamegraph.cpp
.github/workflows/: build.yml
example/: CMakeLists.txt  main.cpp
